--- a/index.html
+++ b/index.html
@@ -158,12 +158,20 @@
 
   </div>
   
+<div style="background: ghostwhite; 
 
-    <p><article><b>How to play?</b><br><br>Wordle is an online 5-letter word game.
+            font-size: 20px; 
 
- Players select letters of the alphabet on the virtual keyboard and enter them into the 5 blank tiles. When they're happy with their 5-letter word guess, they press the submit button. Grey letter means its not in the word. Yellow letter means its in the word but its in wrong place. Then there's the green letter which means it's in the word and in the right place.<br><br></article><i>This is not official Wordle. We are fans though. | Refresh if not working</i></p>
+            padding: 10px; 
 
-    
+            border: 1px solid lightgray; 
+
+            margin: 10px;">
+    <p><b>How to play?</b><br><br>Wordle is an online 5-letter word game.
+
+ Players select letters of the alphabet on the virtual keyboard and enter them into the 5 blank tiles. When they're happy with their 5-letter word guess, they press the submit button. Grey letter means its not in the word. Yellow letter means its in the word but its in wrong place. Then there's the green letter which means it's in the word and in the right place.<br><br><i>This is not official Wordle. We are fans though. | Refresh if not working</i></p>
+
+    </div>
     
   <script type="module">
 
