--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
   <script src="script.js" defer></script>
 
   <title>Wordle Play Online for Free</title>
+  <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day try unlimited times.">
+
+    <!-- FB Meta Tags -->
+
+    <meta property="og:url" content="http://chilloff.cf">
+
+    <meta property="og:type" content="website">
+
+    <meta property="og:title" content="Wordle - A daily word game - Play for free ">
+
+    <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day. Free and Unlimited words.">
+
+    <meta property="og:image" content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
+
+    <!-- Twitter Meta Tags -->
+
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta property="twitter:domain" content="http://chilloff.cf">
+
+    <meta name="theme-color" content="#636363" />
+
+    <link rel="manifest" href="manifest.json" />
+
+
+
+
 
 </head>
 
