--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
   <title>Wordle Play Online for Free</title>
   <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day try unlimited times.">
+  
+  <link rel="shortcut icon" href="wicon.png" type="image/x-icon">
 
     <!-- FB Meta Tags -->
 
