--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Wordle Play Online for Free</title>
   <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day try unlimited times.">
   
-  <link rel="shortcut icon" href="wicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="wlogo.png" type="image/x-icon">
 
     <!-- FB Meta Tags -->
 
