--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-
+  <h1 style="font-size: 21px; font-family: Monospace;"> Play Wordle online </h1>
   <div class="alert-container" data-alert-container></div>
 
   <div data-guess-grid class="guess-grid">
