--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script src="script.js" defer></script>
 
   <title>Wordle Play Online for Free</title>
-  <meta name="description" content="Guess the hidden word in 6 tries. A new puzzle is available each day try unlimited times.">
+  <meta name="description" content="Guess the hidden 5 letter word in 6 tries. A new puzzle is available each day try unlimited times.">
   
   <link rel="shortcut icon" href="wlogo.png" type="image/x-icon">
 
@@ -48,7 +48,7 @@
 </head>
 
 <body>
-  <h1 style="font-size: 21px; font-family: Monospace;"> Play Wordle online </h1>
+  <h1 style="font-size: 21px; font-family: Monospace; colour: skyblue; text-align: center;"> Play Wordle online | ChillOff.CF</h1>
   <div class="alert-container" data-alert-container></div>
 
   <div data-guess-grid class="guess-grid">
