--- a/index.html
+++ b/index.html
@@ -1,208 +1,260 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html>
 
 <head>
 
   <meta charset="UTF-8">
 
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChillOff.Cf - Play online </title>
+
+  <meta name="description" content="Guess the hidden 5 letter word in 6 tries. A new puzzle is available each day but you can chill unlimited times">
+
+  
+
+  <link rel="shortcut icon" href="chilloff.png" type="image/x-icon">
+
+  
+
+  <!-- FB Meta Tags -->
+
+  
+
+  <meta property="og:url" content="https://chilloff.cf">
+
+  
+
+  <meta property="og:type" content="website">
+
+  
+
+  <meta property="og:title" content="Wordle - A daily word game - Play for free ">
+
+  
+
+  <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day. Free and Unlimited words.">
+
+  
+
+  <meta property="og:image" content="https://chilloff.png">
+
+  
+
+  <!-- Twitter Meta Tags -->
+
+  
+
+  <meta name="twitter:card" content="summary_large_image">
+
+  
+
+  <meta property="twitter:domain" content="https://chilloff.cf">
+
+  
+
+  <meta name="theme-color" content="#636363" />
+
+  
+
+  <link rel="manifest" href="manifest.json" />
 
   <link rel="stylesheet" href="styles.css">
 
-  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="bg.css">
 
-  <title>Wordle Play Online for Free</title>
-  <meta name="description" content="Guess the hidden 5 letter word in 6 tries. A new puzzle is available each day try unlimited times.">
+  <link rel="stylesheet" href="results.css">
+
   
-  <link rel="shortcut icon" href="wlogo.png" type="image/x-icon">
-
-    <!-- FB Meta Tags -->
-
-    <meta property="og:url" content="http://chilloff.cf">
-
-    <meta property="og:type" content="website">
-
-    <meta property="og:title" content="Wordle - A daily word game - Play for free ">
-
-    <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day. Free and Unlimited words.">
-
-    <meta property="og:image" content="https://www.dailywordle.com/images/wordle_og_1200x630.png">
-
-    <!-- Twitter Meta Tags -->
-
-    <meta name="twitter:card" content="summary_large_image">
-
-    <meta property="twitter:domain" content="http://chilloff.cf">
-
-    <meta name="theme-color" content="#636363" />
-
-    <link rel="manifest" href="manifest.json" />
-
-
-
-
 
 </head>
 
-<body>
-  <h1 style="font-size: 21px; font-family: Monospace; colour: skyblue; text-align: center;"> Play Wordle online | ChillOff.CF</h1>
-  <div class="alert-container" data-alert-container></div>
-
-  <div data-guess-grid class="guess-grid">
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-    <div class="tile"></div>
-
-  </div>
-
-  <div data-keyboard class="keyboard">
-
-    <button class="key" data-key="Q">Q</button>
-
-    <button class="key" data-key="W">W</button>
-
-    <button class="key" data-key="E">E</button>
-
-    <button class="key" data-key="R">R</button>
-
-    <button class="key" data-key="T">T</button>
-
-    <button class="key" data-key="Y">Y</button>
-
-    <button class="key" data-key="U">U</button>
-
-    <button class="key" data-key="I">I</button>
-
-    <button class="key" data-key="O">O</button>
-
-    <button class="key" data-key="P">P</button>
-
-    <div class="space"></div>
-
-    <button class="key" data-key="A">A</button>
-
-    <button class="key" data-key="S">S</button>
-
-    <button class="key" data-key="D">D</button>
-
-    <button class="key" data-key="F">F</button>
-
-    <button class="key" data-key="G">G</button>
-
-    <button class="key" data-key="H">H</button>
-
-    <button class="key" data-key="J">J</button>
-
-    <button class="key" data-key="K">K</button>
-
-    <button class="key" data-key="L">L</button>
-
-    <div class="space"></div>
-
-    <button data-enter class="key large">Enter</button>
-
-    <button class="key" data-key="Z">Z</button>
-
-    <button class="key" data-key="X">X</button>
-
-    <button class="key" data-key="C">C</button>
-
-    <button class="key" data-key="V">V</button>
-
-    <button class="key" data-key="B">B</button>
-
-    <button class="key" data-key="N">N</button>
-
-    <button class="key" data-key="M">M</button>
-
-    <button data-delete class="key large">
-
-      <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24">
-
-        <path fill="var(--color-tone-1)" d="M22 3H7c-.69 0-1.23.35-1.59.88L0 12l5.41 8.11c.36.53.9.89 1.59.89h15c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm0 16H7.07L2.4 12l4.66-7H22v14zm-11.59-2L14 13.41 17.59 17 19 15.59 15.41 12 19 8.41 17.59 7 14 10.59 10.41 7 9 8.41 12.59 12 9 15.59z"></path>
-
-      </svg>
-
-    </button>
-
-  </div>
   
-<div style="background: #616161; 
 
-            font-size: 20px; 
+<body>
 
-            padding: 10px; 
+  <h2>ChillOff . CF</h2>
 
-            border: 1px solid lightgray; 
+     <button class="finalBtn" onclick="window.location.href = 'daily.html'"><span>Daily 1</span></button>
 
-            margin: 10px;">
-    <p><b>How to play?</b><br><br>Wordle is an online 5-letter word game.
+    </br>
 
- Players select letters of the alphabet on the virtual keyboard and enter them into the 5 blank tiles. When they're happy with their 5-letter word guess, they press the submit button. Grey letter means its not in the word. Yellow letter means its in the word but its in wrong place. Then there's the green letter which means it's in the word and in the right place.<br><br><i>This is not official Wordle. We are fans though. | Refresh if not working</i></p>
+     <button class="finalBtn" onclick="window.location.href = 'unword.html'"><span>Unlimited</span></button>
 
-    </div>
-    
-  <script type="module">
+    </br>
+
+     <button class="finalBtn" onclick="alert('Comming soon!')"><span>Secret</span></button>
+
+    <svg width="612" height="612" viewBox="0 0 612 612" preserveAspectRatio="xMinYMin meet" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+
+      <defs>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.313995361328125 0 0 0.313995361328125 305.95 297.1)" id="gradient0">
+
+          <stop offset="0" stop-color="#3ef5f0" />
+
+          <stop offset="0.2901960784313726" stop-color="#3ef5f0" />
+
+          <stop offset="0.7490196078431373" stop-color="#e248a0" />
+
+          <stop offset="1" stop-color="#e248a0" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.2566986083984375 0 0 0.2566986083984375 259.05 275.75)" id="gradient1">
+
+          <stop offset="0" stop-color="#3ff6f0" />
+
+          <stop offset="1" stop-color="#39b9f6" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(-0.1155242919921875 -0.19970703125 0.19970703125 -0.1155242919921875 258.6 440.1)" id="gradient2">
+
+          <stop offset="0" stop-color="#543864" />
+
+          <stop offset="1" stop-color="#2f1f38" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.26922607421875 0 0 0.26922607421875 342.65 298.15)" id="gradient3">
+
+          <stop offset="0" stop-color="#f450aa" />
+
+          <stop offset="1" stop-color="#a32f80" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.0058135986328125 -0.02166748046875 0.02166748046875 0.0058135986328125 417.15 449.1)" id="gradient4">
+
+          <stop offset="0" stop-color="#3ac3f4" stop-opacity="0" />
+
+          <stop offset="1" stop-color="#144258" stop-opacity="0.4980392156862745" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(-0.0190887451171875 0.0050506591796875 -0.0050506591796875 -0.0190887451171875 332.45 240.6)" id="gradient5">
+
+          <stop offset="0" stop-color="#543864" stop-opacity="0" />
+
+          <stop offset="1" stop-color="#23172a" stop-opacity="0.4980392156862745" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.01348876953125 0.013519287109375 -0.013519287109375 0.01348876953125 168.1 408.3)" id="gradient6">
+
+          <stop offset="0" stop-color="#f450aa" stop-opacity="0" />
+
+          <stop offset="1" stop-color="#2c0c22" stop-opacity="0.24705882352941178" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(-0.1155242919921875 -0.19970703125 0.19970703125 -0.1155242919921875 179.25 486)" id="gradient7">
+
+          <stop offset="0" stop-color="#543864" />
+
+          <stop offset="1" stop-color="#2f1f38" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.26922607421875 0 0 0.26922607421875 342.6 199.6)" id="gradient8">
+
+          <stop offset="0" stop-color="#f450aa" />
+
+          <stop offset="1" stop-color="#a32f80" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.2502899169921875 0 0 0.2502899169921875 259.05 275.75)" id="gradient9">
+
+          <stop offset="0" stop-color="#3ff6f0" />
+
+          <stop offset="1" stop-color="#39b9f6" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(0.26922607421875 0 0 0.26922607421875 342.6 403.4)" id="gradient10">
+
+          <stop offset="0" stop-color="#f450aa" />
+
+          <stop offset="1" stop-color="#a32f80" />
+
+        </linearGradient>
+
+        <linearGradient gradientUnits="userSpaceOnUse" x1="-819.2" x2="819.2" spreadMethod="pad" gradientTransform="matrix(-0.1155242919921875 -0.19970703125 0.19970703125 -0.1155242919921875 417.65 348.1)" id="gradient11">
+
+          <stop offset="0" stop-color="#543864" />
+
+          <stop offset="1" stop-color="#2f1f38" />
+
+        </linearGradient>
+
+  
+
+        <filter id="penrose-glow">
+
+          <feGaussianBlur stdDeviation="20" />
+
+          <feComponentTransfer>
+
+            <feFuncA type="linear" slope="1.5" />
+
+          </feComponentTransfer>
+
+          <feBlend in2="SourceGraphic" />
+
+        </filter>
+
+      </defs>
+
+  
+
+      <g>
+
+        <path filter="url(#penrose-glow)" class="penrose-bg" fill="url(#gradient0)" d="M48.75 479.35 L282.8 72.2 329.15 72.2 563.2 479.35 542.5 522 69.45 522 48.75 479.35 M167.2 436.65 L444.85 436.65 305.95 195.2 167.2 436.65" />
+
+        <path fill="url(#gradient1)" d="M330.35 74.35 L122.05 436.65 444.85 436.65 469.35 479.35 48.75 479.35 282.8 72.2 329.15 72.2 330.35 74.35" />
+
+        <path fill="url(#gradient2)" d="M48.75 479.35 L469.35 479.35 305.95 195.2 328.55 156 542.5 522 69.45 522 48.75 479.35" />
+
+        <path fill="url(#gradient3)" d="M122.05 436.65 L330.35 74.35 563.2 479.35 542.5 522 328.55 156 167.2 436.65 122.05 436.65" />
+
+        <g class="circle-spinner">
+
+          <path fill="#ebebeb" d="M448.45 274.85 Q434 250.15 412.05 231.7 390.05 213.25 363.2 203.3 335.6 193.1 306 193.1 284.3 193.1 263.35 198.7 242.35 204.35 223.55 215.2 L205.45 183.8 Q228.4 170.55 253.95 163.7 279.55 156.85 306 156.85 342.1 156.85 375.75 169.3 408.5 181.4 435.3 203.9 462.1 226.4 479.75 256.55 497.85 287.55 504.1 323.1 L468.45 329.4 Q463.3 300.25 448.45 274.85" />
+
+          <path fill="#ebebeb" d="M176.75 203.95 L200 231.65 Q172 255.15 156.55 288.3 141.1 321.45 141.1 358.05 141.1 402.25 163.2 440.5 185.25 478.8 223.55 500.9 L205.45 532.25 Q158.75 505.3 131.8 458.6 104.85 411.95 104.85 358.05 104.85 313.45 123.7 273 142.6 232.6 176.75 203.95" />
+
+          <path fill="#ebebeb" d="M306 559.2 Q270.55 559.2 237.25 547.05 L249.6 513.05 Q276.95 522.95 306 522.95 339.55 522.95 370.2 510 399.8 497.5 422.65 474.65 445.45 451.85 458 422.25 470.95 391.6 470.95 358.05 L507.2 358.05 Q507.2 398.95 491.4 436.35 476.1 472.45 448.25 500.25 420.4 528.1 384.3 543.4 346.95 559.2 306 559.2" />
+
+          <path fill="#9900ff" fill-opacity="0" d="M508.5 358 Q508.5 441.9 449.2 501.2 389.85 560.5 306 560.5 222.15 560.5 162.8 501.2 103.5 441.9 103.5 358 103.5 274.15 162.8 214.85 222.15 155.5 306 155.5 389.85 155.5 449.2 214.85 508.5 274.15 508.5 358" />
+
+        </g>
+
+        <path fill="url(#gradient4)" d="M360.25 436.65 L444.85 436.65 469.35 479.35 360.25 479.35 360.25 436.65" />
+
+        <path fill="url(#gradient5)" d="M374.85 315 L305.95 195.25 305.95 195.2 328.55 156 408.55 292.9 374.85 315" />
+
+        <path fill="url(#gradient6)" d="M205.05 370.8 L167.2 436.65 122.05 436.65 171.85 350.05 205.05 370.8" />
+
+        <path fill="url(#gradient7)" d="M48.75 479.35 L305.95 479.35 305.95 522 69.45 522 48.75 479.35" />
+
+        <path fill="url(#gradient8)" d="M328.55 156 L232.7 322.65 198.8 303.15 329.15 76.55 328.55 156" />
+
+        <path fill="url(#gradient9)" d="M330.35 74.35 L198.8 303.15 162.2 282 282.8 72.2 329.15 72.2 330.35 74.35 M306 479.35 L48.75 479.35 73.3 436.65 306 436.65 306 479.35" />
+
+        <path fill="url(#gradient10)" d="M418.25 309.45 L451.35 284.75 563.2 479.35 542.5 522 540.65 520.95 417.5 310.1 418.25 309.5 420.2 312.8 420.35 312.9 418.25 309.45" />
+
+        <path fill="url(#gradient11)" d="M420.35 312.9 L542.5 522 469.35 479.35 385.65 333.75 418.25 309.5 420.2 312.8 420.35 312.9" />
+
+      </g>
+
+    </svg>
+
+    <h2>© ChillOff 2022</h2>
+
+    <script type="module">
 
   // Import the functions you need from the SDKs you need
 
@@ -243,7 +295,7 @@
   const analytics = getAnalytics(app);
 
 </script>
+
 </body>
 
 </html>
-
