--- a/unword.html
+++ b/unword.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="bg.css">
   <link rel="stylesheet" href="results.css">
 
-  <title>ChillOff - Daily - Play Online</title>
+  <title>ChillOff - Play Online</title>
 </head>
 <body>
   <!--
@@ -26,7 +26,7 @@
     <span>F</span>
   </div>
   -->
-    <h2>ChillOff ° CF<br> <i>Daily</i></h2>
+    <h2>ChillOff ° CF</h2>
     <button id="share" onclick="resultMessage()" style="display: none;" class="big-button">Copy Results</button>
     <br>
   
@@ -37,16 +37,16 @@
   
     <button id="shareTwit" class="finalBtn" style="display: none;" 
       data-sharer="twitter" 
-      data-title="Daily Dose of ChillOff" 
-      data-hashtags="awesome, ChillOff.cf" 
+      data-title="Chilling with ChillOff" 
+      data-hashtags="chillin, ChillOff.cf" 
       data-url="https://chilloff.cf">Share on Twitter</button>
       
       <button id="shareWhat" class="finalBtn" style="display: none;" 
-      data-sharer="whatsapp" data-title="Checkout my todays ChillOff " data-url="https://chilloff.cf">Share on Whatsapp</button>
+      data-sharer="whatsapp" data-title="Chillin with ChillOff " data-url="https://chilloff.cf">Share on Whatsapp</button>
   
     <button id="shareFb" class="finalBtn" style="display: none;"
         data-sharer="facebook" 
-        data-title="Daily Dose of ChillOff"
+        data-title="Chillin with ChillOff"
         data-hashtags="ChillOff.cf"
         data-url="https://chilloff.cf">
         Share on Facebook
@@ -130,7 +130,7 @@
        Players select letters of the alphabet on the virtual keyboard and enter them into the 5 blank tiles. When they're happy with their 5-letter word guess, they press the submit button. Grey letter means its not in the word. Yellow letter means its in the word but its in wrong place. Then there's the green letter which means it's in the word and in the right place.<br><br>© ChillOff 2022</p>
 </div>
  
-   <script src="daily.js" defer></script>
+   <script src="script.js" defer></script>
    <script src="sharer.min.js" defer></script>
 </body>
 </html>
