--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <meta property="og:type" content="website">
   
-  <meta property="og:title" content="Wordle - A daily word game - Play for free ">
+  <meta property="og:title" content="ChillOff - A daily word game - Play for free ">
   
   <meta property="og:description" content="Guess the hidden word in 6 tries. A new puzzle is available each day. Free and Unlimited words.">
   
