--- a/daily.html
+++ b/daily.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="bg.css">
   <link rel="stylesheet" href="results.css">
-
+  <link rel="shortcut icon" href="chilloff.png" type="image/x-icon">
   <title>ChillOff - Daily - Play Online</title>
 </head>
 <body>
