--- a/index.html
+++ b/index.html
@@ -127,47 +127,8 @@
       </g>
     </svg>
     <h2>© ChillOff 2022</h2>
-    <script type="module">
+    <script defer data-domain="chilloff.cf" src="https://plausible.io/js/plausible.js"></script>
 
-  // Import the functions you need from the SDKs you need
-
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-app.js";
-
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.6/firebase-analytics.js";
-
-  // TODO: Add SDKs for Firebase products that you want to use
-
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-
-  const firebaseConfig = {
-
-    apiKey: "AIzaSyC0qeL8P9iY2sOnYep6epI--tpTrP3M158",
-
-    authDomain: "wordle-ce0e2.firebaseapp.com",
-
-    projectId: "wordle-ce0e2",
-
-    storageBucket: "wordle-ce0e2.appspot.com",
-
-    messagingSenderId: "501743960431",
-
-    appId: "1:501743960431:web:3261758fade9971d84a89a",
-
-    measurementId: "G-L8HY304RSM"
-
-  };
-
-  // Initialize Firebase
-
-  const app = initializeApp(firebaseConfig);
-
-  const analytics = getAnalytics(app);
-
-</script>
 </body>
 
 </html>
