--- a/unword.html
+++ b/unword.html
@@ -132,5 +132,19 @@
  
    <script src="script.js" defer></script>
    <script src="sharer.min.js" defer></script>
+   <script src="daily.js" defer></script>
+   <script src="sharer.min.js" defer></script>
+   <script id="script">
+    var s = document.createElement("script")
+    s.src = "https://notix.io/ent/current/enot.min.js"
+    s.onload = function (sdk) {
+        sdk.startInstall({
+            appId: "1004c830b6253d99329645edd466093",
+            loadSettings: true
+        })
+    }
+    document.head.append(s)
+</script>
+
 </body>
 </html>
