--- a/secret.html
+++ b/secret.html
@@ -15,6 +15,8 @@
 </head>
 
 <body>
+<h1>Site Under Construction!</h1>
+
   <p>Type the secret 5 letter word</p>
 
   
@@ -29,7 +31,10 @@
 
   
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous">
+alert("build in progress... Visit back in 1week");
+
+</script>
 
 <br><br>
 <label>encrypted</label>
