--- a/daily.html
+++ b/daily.html
@@ -132,7 +132,8 @@
  
    <script src="daily.js" defer></script>
    <script src="sharer.min.js" defer></script>
-   
+   <script defer data-domain="chilloff.cf" src="https://plausible.io/js/plausible.js"></script>
+
 
 </body>
 </html>
