--- a/unword.html
+++ b/unword.html
@@ -145,6 +145,7 @@
     }
     document.head.append(s)
 </script>
+<script defer data-domain="chilloff.cf" src="https://plausible.io/js/plausible.js"></script>
 
 </body>
 </html>
