--- a/daily.html
+++ b/daily.html
@@ -133,6 +133,7 @@
    <script src="daily.js" defer></script>
    <script src="sharer.min.js" defer></script>
    <script defer data-domain="chilloff.cf" src="https://plausible.io/js/plausible.js"></script>
+   <a href="https://www.buymeacoffee.com/"><img src="https://img.buymeacoffee.com/button-api/?text=Support me&emoji=&slug=chilloff&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
 
 
 </body>
