--- a/daily.html
+++ b/daily.html
@@ -123,7 +123,7 @@
     </button>
   </div>
  <br>
-   <a href="https://www.buymeacoffee.com/"><img src="https://img.buymeacoffee.com/button-api/?text=Support me&emoji=&slug=chilloff&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
+   <a href="https://www.buymeacoffee.com/chilloff"><img src="https://img.buymeacoffee.com/button-api/?text=Support me&emoji=&slug=chilloff&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
 
  <br>
  <button type="button" class="collapsible"><b>How to play?</b></button>
