--- a/daily.html
+++ b/daily.html
@@ -124,7 +124,12 @@
   </div>
  <br>
 <br>
-   <a href="https://www.buymeacoffee.com/chilloff"><img src="https://img.buymeacoffee.com/button-api/?text=Support me&emoji=&slug=chilloff&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
+   <!--Ad
+   -->
+   
+   
+<iframe data-aa='2071894' src='//ad.a-ads.com/2071894?size=970x250' style='width:970px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe>
+
 
  <br>
  <button type="button" class="collapsible"><b>How to play?</b></button>
